--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,9 @@
 <footer>
-  <p>All content by Micha&euml;l Duerinckx unless mentioned otherwise, available under a <a href="http://creativecommons.org/licenses/by/3.0/deed.en_GB">CC Attribution 3.0 Unported license</a></p>
+  <p>All content by Micha&euml;l Duerinckx unless mentioned otherwise, available under a CC Attribution 3.0 Unported <a href="http://creativecommons.org/licenses/by/3.0/deed.en_GB">license</a></p>
   <nav>
-    <a href="{{ .Site.BaseURL }}">Home</a>
-    <a href="{{ .Site.BaseURL }}index.xml">RSS Feed</a>
+    <a href="{{ .Site.BaseURL }}">Home</a> &middot;
+    <a href="{{ .Site.BaseURL }}index.xml">RSS Feed</a> &middot;
+    <a href="http://michd.me">michd.me</a>
   </nav>
   <p>
     <a href="#top">Back to top</a>
