--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -89,3 +89,214 @@ pre {
   word-wrap: break-word; /* IE */
 }
 
+body {
+  background: #16171D url(/assets/images/background.png);
+  font-family: sans-serif;
+  font-size: 16px;
+  color: #FFF;
+  padding: 2vmin;
+}
+
+body > header {
+  background: #171A2F;
+  padding: 1.5vmin;
+  text-align: center;
+  border-bottom: solid 1px #000;
+  box-shadow: inset 0 -2px 1px rgba(255, 255, 255, .03);
+  margin-bottom: 2em;
+  margin: -2vmin -2vmin 2vmin -2vmin;
+}
+
+body > header h1 {
+  font-size: 4.5vmin;
+  font-weight: bold;
+  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
+}
+
+body > header a,
+body > header a:visited {
+  color: #ABB5FA;
+  text-decoration: none;
+}
+
+body > header a:hover,
+body > header a:focus {
+  color: #FFF;
+}
+
+a {
+  color: #2C49FF;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #7224FF;
+}
+
+a:focus, a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  background-color: #FFF;
+}
+
+section[role=document] {
+  margin: 0 auto;
+  max-width: 1200px;
+  overflow: hidden;
+}
+
+article {
+  background: #0F0F14;
+  background: rgba(15, 15, 20, 0.85);
+  border: solid 2px rgba(255, 255, 255, 0.05);
+  box-shadow: 0 0 1vmin 5px rgba(0, 0, 0, .25);
+  padding: 1.5em;
+  position: relative;
+  margin-bottom: 2vmin;
+}
+
+article:before {
+  position: absolute;
+  content: ' ';
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-color:  transparent transparent #2C49FF transparent;
+  border-width: 0 25px 25px 25px;
+  top: -4px;
+  right: -17px;
+  transform: rotate(45deg);
+}
+
+article > :first-child {
+  margin-top: -0.5rem;
+}
+
+article h1,
+article h2,
+article h3,
+article h4,
+article h5,
+article h6 {
+  font-weight: bold;
+  line-height: 1.3;
+}
+
+article h1,
+article h2,
+article h3 {
+  margin-bottom: 1rem;
+}
+
+article h1 {
+  font-size: 200%;
+}
+
+article h1:first-child a {
+  text-decoration: none;
+  color: #2C49FF;
+}
+
+article h1:first-child a:hover,
+article h1:first-child a:focus {
+  text-decoration: underline;
+}
+
+article h2 {
+  font-size: 175%;
+}
+
+article h3 {
+  font-size: 150%;
+}
+
+article h4 {
+  font-size: 140%;
+}
+
+article h5 {
+  font-size: 130%;
+}
+
+article h6 {
+  font-size: 115%;
+}
+
+article p {
+  line-height: 1.5;
+  margin-bottom: 1.5em;
+}
+
+article ol,
+article ul {
+  padding-left: 2em;
+  margin-bottom: 1.5em;
+}
+
+article ul {
+  list-style-type: disc;
+}
+
+article ol {
+  list-style-type: decimal;
+}
+
+article strong {
+  font-weight: bold;
+}
+
+article em {
+  font-style: italic;
+}
+
+article footer.meta {
+  color: #999;
+  font-size: 75%;
+  padding-bottom: 0.5em;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.05);
+  margin-bottom: 1rem;
+}
+
+article > :last-child,
+article .entry-content > :last-child {
+  margin-bottom: 0;
+}
+
+article hr {
+  border-color: #333;
+  border-width: 4px;
+  margin: 4vmin 0;
+}
+
+body > footer {
+  font-size: 90%;
+  text-align: center;
+  display: block;
+  max-width: 600px;
+  margin: 0 auto 2vmin auto;
+  padding: 2vmin;
+  background-color: #1C1C21;
+  background-color: rgba(28, 28, 33, 0.85);
+  border: solid 2px #0F0F14;
+}
+
+body > footer p,
+body > footer nav {
+  margin-bottom: 1em;
+}
+
+body > footer > p:last-child {
+  margin-bottom: 0;
+}
+
+
+body > footer a,
+body > footer a:visited {
+  font-weight: bold;
+  text-decoration: none;
+  color: #2C49FF;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, .8);
+}
+
